plugins {
	id 'java'
}

group = 'com.marmitt'
version = '0.0.1-SNAPSHOT'
description = 'CTrace - Cryptocurrency Trading Application'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

subprojects {
	apply plugin: 'java'
	
	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}
	
	repositories {
		mavenCentral()
	}
	
	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}
	
	dependencies {
		// Lombok para todos os submódulos
		compileOnly 'org.projectlombok:lombok:1.18.36'
		annotationProcessor 'org.projectlombok:lombok:1.18.36'
		
		// SLF4J API para logging (necessário para @Slf4j)
		implementation 'org.slf4j:slf4j-api:2.0.7'
	}
}

// Root project dependencies and configuration
dependencies {
	// This project depends on the application module
	implementation project(':spring-application')
}

// Configure main source set for root project
sourceSets {
	main {
		java {
			srcDirs = []
		}
		resources {
			srcDirs = []
		}
	}
}
